Mobile-friendly changes
also changed email subjects in shop

--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
 
 <div class="section">
   <div class="p fixed">
-    <div class="headertext">Latest News</div>
+    <div class="titletext">Latest News</div>
     <div class="text">
-    <p> <a href="shop.html">Order the <i>Love, Me Volume 1</i> comic now!</a> For more information check the <a href="shop.html">shop</a> or <a href="loveme/Independent_LoveMe.html"><i>Love, Me</i> page</a> for more information.</p>
-    <p>Check out Sydney Kit's work in the April Gallery Shows! <a href="portfolio.html/#anchor2">See the images from the Columbus Spring Art Fest and the online show "Radicant Bodies"</a>!</p>
+    <p> <a href="shop.html">Order the <i>Love, Me Volume 1</i> comic now!</a> For more information check the <a href="shop.html">shop</a> or <a href="loveme/about.html"><i>Love, Me</i> page</a> for more information.</p>
+    <p>Check out Sydney Kit's work in the April Gallery Shows! <a href="portfolio.html">See the images from the Columbus Spring Art Fest and the online show "Radicant Bodies"</a>!</p>
 </div>
 </div>
 </div>
 <div class="section">
     <div class="p fixed">
-  <h1><a href="about.html">About</a></h1>
-    <p>A biography of Sydney Kit.</p>
+  <p class="titletext"><a href="about.html">About</a></p>
+    <p class="text">A biography of Sydney Kit.</p>
 </div>
 </div>
 <div class="section">
   <div class="p fixed">
-<h1><a href="portfolio.html">Portfolio</a> </h1>
-  <p>Resume and Highlighted Works</p>
+<p class="titletext"><a href="portfolio.html">Portfolio</a> </p>
+  <p class="text">Gallery Shows, Highlighted Works, and Resume</p>
 </div>
 </div>
 <div class="section">
   <div class="p fixed">
-<h1><a href="Collections/index.html">Collections</a></h1>
-  <p>All works of Sydney Kit</p>
+<p class="titletext"><a href="Collections/index.html">Collections</a></p>
+  <p class="text">All works of Sydney Kit</p>
 </div>
 </div>
 <div class="section">
   <div class="p fixed">
-    <h1><a href="shop.html" style="text-decoration: underline; text-decoration-color: #F4DAE2;">Shop</a></h1>
-    <p>Originals and Copies for Sale</p>
+    <p class="titletext"><a href="shop.html" style="text-decoration: underline; text-decoration-color: #F4DAE2;">Shop</a></p>
+    <p class="text">Originals and Copies for Sale</p>
     </div>
 </div>
 </div>
 <div class="section">
   <div class="p fixed">
-      <h1><a href="contact.html"> Contact</a></h1>
-      <p>Ways to contact Sydney Kit</p>
+      <p class="titletext"><a href="contact.html"> Contact</a></p>
+      <p class="text">Ways to contact Sydney Kit</p>
   </div>
 </div>
 
