--- a/loveme/about.html
+++ b/loveme/about.html
@@ -16,16 +16,23 @@
       </div>
       <br  id="anchor1">
       <p style="font-size: 80px; margin-bottom: 0px;"><i>Love, Me</i></p>
-      <img src="comicbook3.jpg" style="width: 35%;">
+      <img src="comicbook3.jpg" style="width: 30%; height: 30%;">
+      <br>
+      <br>
+      <p>Copies of <i>Love, Me Volume One</i> are available at the <a href="../shop.html">shop</a>.<br>Digital Access to the comic can be accessed by clicking <a href="../loveme/access.html">here.</a></p>
+      <img src="comicfan5.jpg" style="width: 12.5%; margin-right: 2.5%;"><img src="comicfan4.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan2.jpg" style="width: 10%;margin-right: 2.5%;"><img src="comicfan1.jpg" style="width: 10%; margin-right: 2.5%;"><img src="comicfan3.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan6.jpg" style="width: 11.5%;">
     <br>
-    <br>
+    <p class="headertext">About the Comic Book</p>
     <div style="margin-right: 10%; margin-left: 10%;">
       <p>"It's okay to not be okay." That is something that is not said enough. <i>Love, Me</i> is Sydney Kit's way of representing that phrase through illustrations.</p>
     <p><i>Love, Me</i> serves as a collection of short comics that share advice and personal stories from friends and family. Each comic tackles subject such as depression,
       sexuality, deaf awareness, and more, in hopes that others can find comfort in relatability.</p>
+      <img src="comicbook2.jpg" style="width: 25%; height: 25%; margin-right: 10px"><img src="comicbook6.jpg" style="width: 25%; height: 25%; margin-left: 10px">
       <br>
-      <img src="comicbook2.jpg" style="width: 25%; margin-right: 10px"><img src="comicbook6.jpg" style="width: 25%; margin-left: 10px">
-    <br>
+      <p class="headertext">Volume 2 Coming Soon!</p>
+      <p class="text"> Volume 2 is currently in the works. For updates follow @Sydney.Kit.Anim on <a href="https://www.instagram.com/sydney.kit.anim/">Instagram</a> and <a href="https://www.facebook.com/sydney.kit.anim/">Facebook</a>.
+        Spots are available to submit your own adivce/ life story! Just fill out this <a href="https://forms.gle/ZqxaHLzwF75FTRtz9">form.</a></p>
+        <video autoplay looped muted src="Love,Me_Vol2_announcement.mp4" style="width: 35%; height: 35%;"></video>
     <br>
       <p style="font-size: 50px;">How It Started</p>
 <p><i>Love, Me</i> started off as a semester-long project for <a href="osu_Webcomics.html">Webcomics</a> and has continued into a larger series.</p>
@@ -59,14 +66,8 @@ function showDivs(n) {
 }
 </script>
 <br>
-<p style="font-size: 50px;">About the Comic Book</p>
-<p>Copies of <i>Love, Me Volume One</i> are available at the <a href="../shop.html">shop</a>.<br>Digital Access to the comic can be accessed by clicking <a href="../loveme/access.html">here.</a></p>
-<img src="comicfan5.jpg" style="width: 12.5%; margin-right: 2.5%;"><img src="comicfan4.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan2.jpg" style="width: 10%;margin-right: 2.5%;"><img src="comicfan1.jpg" style="width: 10%; margin-right: 2.5%;"><img src="comicfan3.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan6.jpg" style="width: 11.5%;">
-<br>
-<br>
-<br>
 <p style="font-size: 50px;">Want to share your own advice?</p>
-<p>Send Sydney Kit an <a href="mailto:kit.frank.art@gmail.com">email</a> with the subject "Love, Me Advice Submission"</p>
+<p>Send Sydney Kit an <a href="mailto:kit.frank.art@gmail.com">email</a> with the subject "Love, Me Advice Submission" or fill out this <a href="https://forms.gle/ZqxaHLzwF75FTRtz9">form.</a></p>
 
 <br>
 <br>
