--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="navbar.css">
     <title>Portfolio</title>
     <style>
-      .box{
-          display:flex;
-          flex-direction: row;
-          justify-content: center;
-          justify-content: space-evenly;
-          margin-left: 15%;
-          margin-right: 15%;
-      }
+     .box{
+        display:flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+    .box > div {
+        padding: 5%;
+    }
       </style>
 </head>
 <body style="margin-left: 0px;">
@@ -34,16 +37,16 @@
     <span style="padding: 0px 20px;"><a href="#anchor3"> Awards</a></span>
     <span style="padding: 0px 20px;"> <a href="#anchor4"> Resume</a></span>
 </p>  
-<p>image or video here</p>
+<p>Coming soon: image or video here</p>
   <br id="anchor1">
   <p class="headertext">Highlighted Work</p>
-  <p>Gallery of highlighted work here</p>
+  <p>Coming soon: Gallery of highlighted work here</p>
   <br id="anchor2">
   <p class="headertext">Gallery Shows</p>
   <p class="text"><a href="https://u.osu.edu/radicantbodies/">The Ohio State Unversity Art & Technology Department <br>"Radicant Bodies" Online Gallery</a></p>
   <p style="font-size: 20px;">April 23, 2020-Current</p>
   <div class="box";>
-    <a href="u.osu.edu/radicantbodies/"><img src="img/radicant-bodies.png" width="75%"></a>  
+    <a href="u.osu.edu/radicantbodies/"><img src="img/radicant-bodies.png" width="75%" height="75%"></a>  
   <p class="text">Three works, a page from the <i>Love, Me</i> comic book, <i>Mime Game Prototype</i>, and this website's homepage, were featured 
     "Radicant Bodies" starting April 23, 2021.</p></div>
   <br>
@@ -53,9 +56,9 @@
   <p style="font-size: 20px;">April 18, 2021</p>
   <div class="box";>  
     <p class="text" style="margin-right: 5%;">Two works, <i>To Be Remembered</i> and <i>Wood Detail</i>, were featured at the 400 W Rich St Gallery in Columbus. The comic book <i>Love, Me</i> was also displayed on a pedestal near the two works.</p>
-    <img src="img/IMG_1444.PNG" width="45%"></div>
+    <img src="img/IMG_1444.PNG" width="55%" height="55%"></div>
     <br>
- <img src="img/IMG_1333.jpeg" style="width: 15%"> <img src="img/IMG_1325.jpeg" style="width: 15%"> <img src="img/IMG_1334.jpeg" style="width: 15.9%"> <img src="img/IMG_1331.jpeg" style="width: 15%">
+ <img src="img/IMG_1333.jpeg" style="width: 15%; height: 15%"> <img src="img/IMG_1325.jpeg" style="width: 15%; height: 15%;"> <img src="img/IMG_1334.jpeg" style="width: 15.9%; height: 15.9%;"> <img src="img/IMG_1331.jpeg" style="width: 15%; height: 15%;">
 <br>
    <p class="text"><i>To Be Remembered</i> won the audience choice award.</p>
  <br>
@@ -64,7 +67,7 @@
   <p class="text"><a href="https://www.instagram.com/p/CNYtHY5pc42/">Buckeye Boundary Breakers Online Gallery</a></p>
   <p style="font-size: 20px;">April 7, 2021</p>
   <div class="box";>  
-    <img src="img/bbblogo.JPG" width="25%">
+    <img src="img/bbblogo.JPG" width="25%" height="25%">
     <p class="text">The page that discussed American Sign Language (ASL) from the comic book <i>Love, Me</i> was featured.</p>
   </div>
  <p class="text">Visit The Page: <span style="padding: 25px 0px;"><a href="loveme/Independent_LoveMe.html"><i>Love, Me</i></a></span>
@@ -73,7 +76,7 @@
   <p style="font-size: 20px;">December 4, 2020-Current</p>
   <div class="box";>  
     <p class="text" style="margin-right: 5%;">Three works, the then named <i>Both Rings</i>, now named <i>To Be Remembered</i>, <i>A Laney Day</i> and <i>How Much Did I Sleep Last Night?</i>, were featured starting December 2020.</p>
-    <img src="img/canyousee.jpg" style="width: 30%;">
+    <img src="img/canyousee.jpg" style="width: 30%; height: 30%;">
   </div>
   <br>
   <p class="text">Visit Each Page: <span style="padding: 10px 20px;"><a href="collections/osu_3DModeling.html"><i>To Be Remembered (Both Rings)</i></a></span><span style="padding: 10px 40px;"><a href="collections/Independant_ALaneyDay.html"><i>A Laney Day</i></a></span><a href="collections/osu_3DAnimation.html"><i>How Much Did I Sleep Last Night?</i></a></p>
@@ -81,7 +84,7 @@
   <p class="text"><a href="https://www.facebook.com/events/470635543819151/">The 2020 Anatomy Fashion Show<br>Hosted by Phi Delta Epsilon OH Zeta at The Ohio State University</a></p>
   <p style="font-size: 20px;">February 23, 2020</p>
   <div class="box";>  
-    <img src="img/skeleton.JPG" style="width: 25%;">
+    <img src="img/skeleton.JPG" style="width: 25%; height: 25%;">
     <p class="text" style="margin-left: 5%;">Sydney Kit was one of the artists selected to paint a model for the fashion show that raised money for Nationwide Children's Hospital.
     <br> This was an all day event that involved: getting the models into the suits, painting the respective system, getting the models to the fashion show, and then the walk.</p>
   </div>
@@ -93,7 +96,7 @@
   <div class="box";>  
     <p class="text" style="margin-right: 5%;">Two works, <i>Our Biggest Dream</i> and <i>Tongue Tower</i>, were featured in the Hopkins Hall Gallery during the 2019 summer and autumn semesters.<br>
       <i>Our Biggest Dream</i> was shown on a big screen during the opening show and continued to be shown on a monitor in the hallway for the rest of the gallery show.</p>
-      <img src="img/hopkins.jpg" width="70%">
+      <img src="img/hopkins.jpg" width="70%" height="70%">
     </div>
   <br>
   <p class="text">Visit Each Page: <span style="padding: 10px 40px;"><a href="collections/osu_MovingImage.html"><i>Our Biggest Dream</i></a></span><a href="collections/osu_3DModeling.html"><i>Tongue Tower</i></a></p>
@@ -101,7 +104,7 @@
   <p class="text"><a href="https://www.instagram.com/p/BvKftxAFf-g/">Alpha Rho Chi Student Collective</a></p>
   <p style="font-size: 20px;">April 2, 2019</p>
   <div class="box";>  
-    <img src="img/arc.JPG" style="width: 25%;">
+    <img src="img/arc.JPG" style="width: 25%; height: 25%;">
     <p class="text" style="margin-right: 5%;">Two works, <i>Hockey Still Life</i> and <i>Replication Sunflowers</i>, were featured. <br> This was Sydney Kit's first gallery show.</p>
   </div>
  <br>
