--- a/shop.html
+++ b/shop.html
@@ -23,16 +23,13 @@
 
 <body style="text-align: center; margin: 0px;">
   <div class="navbar">
-  <a href="index.html"><img src="img/SK_logo2.png" width="100%"> </a> 
+  <a href="index.html"><img src="img/SK_logo2.png" width="100%" height="100%"> </a> 
   <a href="about.html">About</a> 
   <a href="portfolio.html">Portfolio</a>
  <a href="collections/index.html">Collections</a> 
  <a href="shop.html">Shop</a>
  <a href="contact.html">Contact</a>
 </div>
-<br>
-<br>
-<br>
   <p class="titletext" style="margin-bottom: 0px;"><b>Shop</b></p>
    <p class="headertext">
         <span style="padding: 0px 20px;"><a href="#anchor1">New Items</a></span>
@@ -47,7 +44,7 @@
   <p class="headertext">New Items</p>
   <div class="box">
   <img src="loveme/comicbook5.jpg" style="width: 30%; height: 30%;">
-  <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Volume 1 Order&body=Hello, I would like (number) copy/copies of the Love, Me Volume 1. I would like to (pick up at -)(ship it to -).">
+  <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Love, Me Volume 1&body=Hello, I would like (number) copy/copies of the Love, Me Volume 1. I would like to (pick up at -)(ship it to -).">
 <i>Love, Me</i> Volume 1</a><br><br>$7 each <br> $6 for US shipping</p>
 </div>
   <br>
@@ -55,12 +52,12 @@
   <p class="headertext"> Originals</p>
 <div class="box">
 <img src="img/both rings.jpg" width="40%" height="40%">
-<p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=To Be Remembered Offer&body=Hello, I would like to purchase the limited print, audience award winning To Be Remembered for $250.">
+<p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - To Be Remembered&body=Hello, I would like to purchase the limited print, audience award winning To Be Remembered for $250.">
 <i>To Be Remembered</i></a><br><br>Limited Print<br>Winner of the Columbus Spring Art Fest Audience Award<br>Featured at the 400 W Rich Gallery<br><br>$250 with frame or best offer.
 </div>
 <div class="box">
   <p class="text">
-<a href="mailto:kit.frank.art@gmail.com?subject=Drawing Piece Offer&body=Hello, I would like to see if (piece) is available for purchase.">
+<a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Drawing Pieces&body=Hello, I would like to see if (piece) is available for purchase.">
   Various Drawing Pieces</a><br><br>Pieces from the <a href="collections/Drawing.html">Undergraduate Drawing</a> class are available<br><br>$100 for black and white, $150 for color<br><br><i>Wood Detail</i> is not included.</p>
 <img src="collections/files/2018-08-14 020.JPG" style="width: 40%; height: 40%;">
 </div>
@@ -68,12 +65,12 @@
   <p class="headertext">Prints</p>
   <div class="box">
       <img src="img/Love,Me_cover.png" style="width: 25%; height: 25%;">
-      <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Volume 1 Order&body=Hello, I would like (number) copy/copies of the Love, Me Volume 1. I would like to (pick up at -)(ship it to -).">
+      <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Love, Me Volume 1&body=Hello, I would like (number) copy/copies of the Love, Me Volume 1. I would like to (pick up at -)(ship it to -).">
       <i>Love, Me</i> Volume 1<br>Comic book</a><br><br> $7 each <br> $6 for US shipping </p>
   </div>
   <br>
   <div class="box">
-      <p class="text" style="margin-right: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Nature And Shapes Print Order&body=Hello, I would like (number) print(s) of the Nature And Shapes collection titled (title).">
+      <p class="text" style="margin-right: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Nature And Shapes Print&body=Hello, I would like (number) print(s) of the Nature And Shapes collection titled (title).">
         <i>Nature&Shapes</i> Collection</a><br><br> $5 each <br> $3 for US shipping<br> All pieces are available. <a href="collections/Independant_Nature&Shapes.html">See More Here.</a></p>
       <img src="img/nature&shapes_chris.jpg" style="width: 25%; height: 25%;">
 </div>
@@ -82,13 +79,13 @@
   <p class="headertext">Comissions</p>
   <div class="box">
   <img src="img/nature&shapes_je.jpg" style="width: 25%; height: 25%;">
-  <a href="mailto:kit.frank.art@gmail.com?subject=Nature And Shapes Commission&body=Hello, I would like a custom Nature And Shapes piece with (plant), (shape), and (color).">
+  <a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Nature And Shapes Commission&body=Hello, I would like a custom Nature And Shapes piece with (plant), (shape), and (color).">
   <p class="text" style="margin-left: 5%;">Customizable <i>Nature&Shapes</i> Piece</a> <br><br>$10<br><br> Digital Painting</p>
 </div>
 <br>
 <br>
 <div class="box">
-    <p class="text" style="margin-right: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Portraits And Animals Commission Order&body=Hello, I would like a custom Portrait And Animals piece with the attached image, (animal), and (color).">
+    <p class="text" style="margin-right: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Portraits And Animals Commission Order&body=Hello, I would like a custom Portrait And Animals piece with the attached image, (animal), and (color).">
       Customizable <i>Portaits&Animals</i> Piece</a> <br><br>$25<br><br> Digital Painting</p>
     <img src="img/animals&portraits_to.jpg" style="width: 45%; height: 45%;">
   </div>
@@ -96,13 +93,13 @@
   <br>
   <div class="box">
     <img src="img/laney.png" style="width: 25%; height: 25%;">
-    <a href="mailto:kit.frank.art@gmail.com?subject=Pet Digital Painting Commission&body=Hello, I would like a custom digital painting of my pet. The image of my pet is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, my backyard, etc.)">
+    <a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Pet Digital Painting Commission&body=Hello, I would like a custom digital painting of my pet. The image of my pet is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, my backyard, etc.)">
     <p class="text" style="margin-left: 5%;">Customizable Pet Piece </a><br><br>Starting at $20<br><br> Digital Painting</p>
   </div>
   <br>
   <br>
   <div class="box">
-    <a href="mailto:kit.frank.art@gmail.com?subject=Pet Acrylic Painting Commission&body=Hello, I would like a custom acrylic painting of my pet. The image of my pet is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, my backyard, etc.)">
+    <a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Pet Acrylic Painting Commission&body=Hello, I would like a custom acrylic painting of my pet. The image of my pet is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, my backyard, etc.)">
     <p class="text" style="margin-right: 5%;">Customizable Pet Piece </a><br><br>Starting at $50<br><br> Acrylic 8.5in x 11in Painting <br><br> Other sizes and styles available</p>
     <img src="img/petpainting.jpg" style="width: 30%; height: 30%;">
   </div>
@@ -110,7 +107,7 @@
   <br>
   <div class="box">
     <img src="img/kavbasket.jpg" style="width: 45%; height: 45%">
-    <a href="mailto:kit.frank.art@gmail.com?subject=Portrait Digital Painting Commission&body=Hello, I would like a custom digital portrait. The image I would like painted is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, the same as the image, etc.)">
+    <a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Portrait Digital Painting Commission&body=Hello, I would like a custom digital portrait. The image I would like painted is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, the same as the image, etc.)">
     <p class="text" style="margin-left: 5%;">Portrait Piece </a><br><br>Starting at $20<br><br> Digital Painting</p>
   </div>
   <br>
