--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="section">
   <div class="navbar">
-    <a href="index.html"><img src="img/SK_logo2.png" width="100%"> </a> 
+    <a href="index.html"><img src="img/SK_logo2.png" width="100%" height="100%"> </a> 
     <a href="about.html">About</a> 
     <a href="portfolio.html">Portfolio</a>
    <a href="collections/index.html">Collections</a> 
