preview page added to love, me

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,14 @@
     <span style="padding: 0px 20px;"><a href="#anchor3"> Awards</a></span>
     <span style="padding: 0px 20px;"> <a href="#anchor4"> Resume</a></span>
 </p>  
-<p>Coming soon: image or video here</p>
+<video muted autoplay loop src="img/2020DemoReel.mp4" style="width: 65%; height: 65%;"></video>
   <br id="anchor1">
-  <p class="headertext">Highlighted Work</p>
-  <p>Coming soon: Gallery of highlighted work here</p>
+  <br>
+  <br>
+  <p class="headertext" style="background-color: #F4DAE2;">Highlighted Work</p>
+<a href="loveme/about.html"><img src="img/Love,Me_cover.png" style="width: 25%; height: 25%; margin-right: 5%;"></a><a href="collections/ALaneyDay.html"><img src="img/laney.png" style="width: 21.5%; height: 21.5%;"></a>
   <br id="anchor2">
+  <br>
   <p class="headertext">Gallery Shows</p>
   <p class="text"><a href="https://u.osu.edu/radicantbodies/">The Ohio State Unversity Art & Technology Department <br>"Radicant Bodies" Online Gallery</a></p>
   <p style="font-size: 20px;">April 23, 2020-Current</p>
@@ -109,8 +112,10 @@
   </div>
  <br>
  <p class="text">Visit Each Page: <span style="padding: 10px 40px;"><a href="collections/osu_Painting.html"><i>Hockey Still Life</i></a></span><a href="collections/osu_Painting.html"><i>Replication Sunflowers</i></a></p>
- <hr>
+ <br>
  <br id="anchor3">
+ <br>
+ <br>
  <p class="headertext">Awards</p>
  <p class="text"><i>Audience Choice Award - Columbus Spring Art Fest</i></p>
  <p class="text">Awarded April 18, 2021 to <i>To Be Remembered</i>.</p>
@@ -118,9 +123,21 @@
  <p class="text"><i>The Fergus Material and Scholarships Fund</i></p>
  <p class="text">Awarded March 24, 2021 for the publication of the <i>Love, Me</i> comic book.</p>
   <br id="anchor4">
+  <br>
+  <br>
   <p style="margin-bottom: 0px;" class="headertext"><b>Resume</b></p>
  <p class="text"><a href="img/Sydney Kit Resume.pdf" download>Download 4/2021 Version</a></p>
  <p class="text"><a href="collections/osu_InternetARt/exercises/resume.html">Interactive Resume</a></p>
+ <br>
+ <br>
+ <br>
+ <p style="margin-bottom: 0px;" class="headertext"><b>Socials</b></p>
+ <p class="text"><a href="https://www.facebook.com/sydney.kit.anim/">Facebook</a> & <a href="https://www.instagram.com/sydney.kit.anim/">Instagram</a>: @Sydney.Kit.Anim</a></p>
+<br>
+ <br>
+ <br>
+ <br>
+ <br>
  <br>
  <br>
  <br>
