--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <div class="p fixed">
     <div class="titletext">Latest News</div>
     <div class="text">
-    <p> <a href="shop.html">Order the <i>Love, Me Volume 1</i> comic now!</a> For more information check the <a href="shop.html">shop</a> or <a href="loveme/about.html"><i>Love, Me</i> page</a> for more information.</p>
-    <p>Check out Sydney Kit's work in the April Gallery Shows! <a href="portfolio.html">See the images from the Columbus Spring Art Fest and the online show "Radicant Bodies"</a>!</p>
+    <p> <a href="shop.html">Order the <i>Love, Me Volume 1</i> comic now!</a> For more information check the <a href="shop.html">shop</a> or <a href="loveme/about.html"><i>Love, Me</i> page</a>.</p>
+    <p>Follow on Instagram or Facebook @Sydney.Kit.Anim</p>
 </div>
 </div>
 </div>
