--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
   </div>
   <div style="margin-left: 10%; margin-right: 10%; text-align: center;">
   <br>
-  <p style="margin-bottom: 0px;" class="titletext">Portfolio</p>
+  <p style="margin-bottom: 0px;margin-top: 10%;" class="titletext">Portfolio</p>
   <p class="headertext">
     <span style="padding: 0px 20px;"><a href="#anchor1">Highlighted Work</a></span>
     <span style="padding: 0px 20px;"><a href="#anchor2"> Gallery Shows</a></span>
@@ -41,11 +41,12 @@
   <br id="anchor1">
   <br>
   <br>
+  <br>
   <p class="headertext" style="background-color: #F4DAE2;">Highlighted Work</p>
 <a href="loveme/about.html"><img src="img/Love,Me_cover.png" style="width: 25%; height: 25%; margin-right: 5%;"></a><a href="collections/ALaneyDay.html"><img src="img/laney.png" style="width: 21.5%; height: 21.5%;"></a>
   <br id="anchor2">
   <br>
-  <p class="headertext">Gallery Shows</p>
+  <p class="headertext" style="background-color: #F4DAE2;">Gallery Shows</p>
   <p class="text"><a href="https://u.osu.edu/radicantbodies/">The Ohio State Unversity Art & Technology Department <br>"Radicant Bodies" Online Gallery</a></p>
   <p style="font-size: 20px;">April 23, 2020-Current</p>
   <div class="box";>
@@ -116,7 +117,7 @@
  <br id="anchor3">
  <br>
  <br>
- <p class="headertext">Awards</p>
+ <p class="headertext"style="background-color: #F4DAE2;">Awards</p>
  <p class="text"><i>Audience Choice Award - Columbus Spring Art Fest</i></p>
  <p class="text">Awarded April 18, 2021 to <i>To Be Remembered</i>.</p>
   <br>
@@ -125,13 +126,13 @@
   <br id="anchor4">
   <br>
   <br>
-  <p style="margin-bottom: 0px;" class="headertext"><b>Resume</b></p>
+  <p style="margin-bottom: 0px; background-color: #F4DAE2" class="headertext"><b>Resume</b></p>
  <p class="text"><a href="img/Sydney Kit Resume.pdf" download>Download 4/2021 Version</a></p>
  <p class="text"><a href="collections/osu_InternetARt/exercises/resume.html">Interactive Resume</a></p>
  <br>
  <br>
  <br>
- <p style="margin-bottom: 0px;" class="headertext"><b>Socials</b></p>
+ <p style="margin-bottom: 0px; background-color: #F4DAE2" class="headertext"><b>Socials</b></p>
  <p class="text"><a href="https://www.facebook.com/sydney.kit.anim/">Facebook</a> & <a href="https://www.instagram.com/sydney.kit.anim/">Instagram</a>: @Sydney.Kit.Anim</a></p>
 <br>
  <br>
