--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
  <a href="shop.html">Shop</a>
  <a href="contact.html">Contact</a>
 </div>
-  <p class="titletext" style="margin-bottom: 0px;"><b>Shop</b></p>
+  <p class="titletext" style="margin-bottom: 0px; margin-top: 10%;"><b>Shop</b></p>
    <p class="headertext">
         <span style="padding: 0px 20px;"><a href="#anchor1">New Items</a></span>
         <span style="padding: 0px 20px;"><a href="#anchor2"> Originals</a></span>
@@ -39,6 +39,8 @@
     </p>  
   <img src="img/SydneyKitprofilepic.jpg" width="40%" height="40%">
   <br id="anchor1">
+  <br>
+  <br>
   <br>
   <br>
   <p class="headertext">New Items</p>
