--- a/collections/index.html
+++ b/collections/index.html
@@ -48,9 +48,12 @@
   </div>
 <br>
   <br>
-  <p style="margin-left: 15%;" class="headertext">Internships</p>  
+  <p style="margin-left: 15%;" class="headertext">Internships & Jobs</p>  
   <div class="box";>
     <a href="AustinVisuals.html"><p style="text-align: right;">Austin Visuals</p><video autoplay muted loop src="files/NB Final Demo Version 2.mp4" style= "height: 180px; width: 320px;"></video></a>
+    <a href="PourOnTheArt.html"><p>Pour On The Art</p><img src="files/Pour-On-The-Art-winning-logo.png" style= "height: 180px; width: 320px;"></img></a>
+  </div>
+  <div class="box";>
     <a href="Tutel.html"><p>Tutel</p><video autoplay muted loop src="files/Tutle version 3.3.mp4" style= "height: 180px; width: 320px";></video></a>
   </div>
 <br>
