--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
   <div class="p fixed">
     <div class="titletext">Latest News</div>
     <div class="text">
+      <p>Sydney Kit is now a paint and sip instructor with <a href="collections/PourOnTheArt.html">Pour On The Art</a>! See the calendar of events to schedule a ticket today.</p>
     <p> <a href="shop.html">Order the <i>Love, Me Volume 1</i> comic now!</a> For more information check the <a href="shop.html">shop</a> or <a href="loveme/about.html"><i>Love, Me</i> page</a>.</p>
-    <p>Follow on Instagram or Facebook @Sydney.Kit.Anim</p>
+    <p>See the full calendar of events <a href="calendar.html">here</a>.</p>
 </div>
 </div>
 </div>
 <div class="section">
     <div class="p fixed">
-  <p class="titletext"><a href="about.html">About</a></p>
+    <p class="titletext"><a href="about.html">About</a></p>
     <p class="text">A biography of Sydney Kit.</p>
 </div>
 </div>
