--- a/collections/AustinVisuals.html
+++ b/collections/AustinVisuals.html
@@ -32,85 +32,58 @@
   </style>
 </head>
 
-<body style="font-size: 30px; text-align: center;">
+<body style="text-align: center;">
   <div class="navbar">
-  <a href="../home.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
+  <a href="../index.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
   <a href="../about.html" style="font-size: 40px;">About</a> 
   <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
  <a href="../collections/index.html" style="font-size: 40px;">Collections</a> 
  <a href="../shop.html" style="font-size: 40px;">Shop</a>
  <a href="../contact.html" style="font-size: 40px;">Contact</a>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<header style="font-size: 60px; text-align: center;"><b>Austin Visuals</b></header><br>
-<div style="text-align: center;"><img src="files/austinvisuals.jpg">
-  </div>
+
+<p class="titletext" style="margin-top: 10%; margin-bottom: 0%;"><b>Austin Visuals</b></p>
+<div style="margin-left: 5%; margin-right: 5%;">
+    <img src="files/austinvisuals.jpg" style="40%">
 
 <br>
 <br>
 <br>
-<p style="font-size: 50px;"><b>Responsibilities</b></p>
-<p> While working with Austin Visuals, Sydney Kit created company commericals, edited blog posts,</p>
-<p> managed company social media, and worked with customers to create unique videos.</p>
+<p class="text">Sydney Kit interned for Austin Visuals from September 2019 - October 2020 and worked for them from July 2021 - current.</p>
+<p class="headertext"><u>Work</u></p>
+<p class="text">In progress. Come back later!</p>
 <br>
+<p class="headertext"><u>Internship</u></p>
+<p class="headertext"><b>Responsibilities</b></p>
+<p class="text"> While interning for Austin Visuals, Sydney Kit created company commericals, edited blog posts, managed company social media, and worked with customers to create unique videos.</p>
 <br>
-<br>
-<p style="font-size: 50px; text-align: center;"><b>Company Commercial</b></p>
-<p style="font-size: 20px;">Storyboards, script, video, editing, and selecting the voiceover actor were all done by Sydney Kit.</p>
-<div style="text-align: center;">
+<p class="headertext"><b>Company Commercial</b></p>
+<p class="text">Storyboards, script, video, editing, and selecting the voiceover actor were all done by Sydney Kit.</p>
     <iframe src="https://player.vimeo.com/video/418273025" width="690" height="540" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-</div>
 <br>
-<p style="font-size: 50px; text-align: center;"><b>Blog Posts</b></p>
-<p>Blog posts were edited for clarity, grammar fixes, and readability. Blog posts were also created.</p>
-<div style="text-align: center;">
+<p class="headertext"><b>Blog Posts</b></p>
+<p class="text">Blog posts were edited for clarity, grammar fixes, and readability. Blog posts were also created.</p>
 <a href="https://austinvisuals.com/houston-gas-and-oil-companies-are-you-looking-for-great-3d-animation/"> <img src="files/blog.JPG" style="width: 25%;"></a>
 <a href="https://austinvisuals.com/email-marketing-automation-increasing-heres-why/"> <img src="files/blog2.JPG" style="width: 45%;"></a>
-</div>
 <br>
+<p class="headertext"><b>Managed Company Social Media</b></p>
+<p class="text">Facebook posts were created, scheduled in advance, and stylized with unique graphics.</p>
+<img src="files/Graphic (Map).gif" style="width: 25%;">
+<img src="files/graphic (world connect).gif" style="width: 25%;">
+    <img src="files/Graphics (Leaf).jpg" style="width: 25%;">
+    <img src="files/Graphics (Question Mark).jpg" style="width: 25%;">
+    <img src="files/Gaphic (Coffee).gif" style="width: 25%;">
 <br>
-<p style="font-size: 50px; text-align: center;"><b>Managed Company Social Media</b></p>
-<p>Facebook posts were made and stylized with unique graphics.</p>
-<div style="text-align: center;">
-<img src="files/Graphic (Map).gif" style="width: 35%;">
-<img src="files/graphic (world connect).gif" style="width: 35%;">
-</div>
-<br>
-<div style="text-align: center;">
-    <img src="files/Graphics (Leaf).jpg" style="width: 35%;">
-    <img src="files/Graphics (Question Mark).jpg" style="width: 35%;">
-    </div>
-    <br>
-<div style="text-align: center;">
-    <img src="files/Gaphic (Coffee).gif" style="width: 35%;">
-    </div>
-<br>
-<br>
-<br>
-<br>
-
-<p style="font-size: 50px;">Worked With Customers To Create Unique Videos</p>
-<p>Customer wanted a music video for a rap about stimulus checks. Project was cancelled midway.</p>
-<p style="font-size: 20px;">The following video is a rough draft that did not make it to editing and experienced rendering issues.</p>
+<p class="headertext"">Worked With Customers To Create Unique Videos</p>
+<p class="text">Customer wanted a music video for a rap about stimulus checks. The project was cancelled midway.</p>
+<p class="text">The following video is a rough draft that did not make it to editing and experienced rendering issues. The audio does not belong to Sydney Kit.</p>
 <video controls src="files/AV_TT_completion_cancellation.mp4" style="width: 60%;"></video>
-<p style="font-size: 20px;">Characters created for the video:</p>
-<div style="text-align: center;">
-<img src="files/AV_TT_pelosi.jpg" style="width: 25%;">
-<img src="files/AV_TT_obama.jpg" style="width: 25%;">
-</div>
-<br>
-<div style="text-align: center;">
-    <img src="files/AV_TT_biden.jpg" style="width: 25%;">
-    <img src="files/AV_TT_backgroundsingers.jpg" style="width: 25%;">
+<p class="text">Characters created for the video:</p>
+<img src="files/AV_TT_pelosi.jpg" style="width: 20%;">
+<img src="files/AV_TT_obama.jpg" style="width: 20%;">
+    <img src="files/AV_TT_biden.jpg" style="width: 20%;">
+    <img src="files/AV_TT_backgroundsingers.jpg" style="width: 20%;">
     </div>
-    <div style="text-align: center;">
-
-        </div>
 <br>
 <br>
 </body>
