--- a/shop.html
+++ b/shop.html
@@ -45,9 +45,9 @@
   <br>
   <p class="headertext">New Items</p>
   <div class="box">
-  <img src="loveme/comicbook5.jpg" style="width: 30%; height: 30%;">
-  <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Love, Me Volume 1&body=Hello, I would like (number) copy/copies of the Love, Me Volume 1. I would like to (pick up at -)(ship it to -).">
-<i>Love, Me</i> Volume 1</a><br><br>$7 each <br> $6 for US shipping</p>
+  <img src="collections/files/GreetingCard_marketing1.jpg" style="width: 30%; height: 30%;">
+  <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Greeting Cards&body=Hello, I would like (number) bundles of 10 Greeting Cards with (select cover type here) as the cover. I would like the inside text to say (nothing or custom message) I would like to (pick up at -)(ship it to -).">
+<i>Nature & Shapes</i> Greeting Cards</a><br><br>$20 for 10 cards<br>Comes with envelopes<br>Customizable front cover and inside message</p>
 </div>
   <br>
   <br id="anchor2"><br><br>
