--- a/collections/AustinVisuals.html
+++ b/collections/AustinVisuals.html
@@ -32,38 +32,49 @@
   </style>
 </head>
 
-<body style="text-align: center;">
+<body style="text-align: center; margin: 0%;">
   <div class="navbar">
-  <a href="../index.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
-  <a href="../about.html" style="font-size: 40px;">About</a> 
-  <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
- <a href="../collections/index.html" style="font-size: 40px;">Collections</a> 
- <a href="../shop.html" style="font-size: 40px;">Shop</a>
- <a href="../contact.html" style="font-size: 40px;">Contact</a>
+  <a href="../index.html"><img src="../img/SK_logo2.png" width="100%"> </a> 
+  <a href="../about.html">About</a> 
+  <a href="../portfolio.html">Portfolio</a>
+ <a href="../collections/index.html">Collections</a> 
+ <a href="../shop.html">Shop</a>
+ <a href="../contact.html">Contact</a>
 </div>
 
 <p class="titletext" style="margin-top: 10%; margin-bottom: 0%;"><b>Austin Visuals</b></p>
 <div style="margin-left: 5%; margin-right: 5%;">
-    <img src="files/austinvisuals.jpg" style="40%">
-
+   <a href="austinvisuals.com"> <img src="files/austinvisuals.jpg" style="width: 40%"></a>
 <br>
 <br>
 <br>
-<p class="text">Sydney Kit interned for Austin Visuals from September 2019 - October 2020 and worked for them from July 2021 - current.</p>
+<p class="text">Sydney Kit <a href="#anchor1"> interned </a>for Austin Visuals from September 2019 - October 2020 and <a href="#anchor2">worked</a> for them from July 2021 - current.</p>
+<br id="anchor2">
+<br>
 <p class="headertext"><u>Work</u></p>
-<p class="text">In progress. Come back later!</p>
+<p class="headertext"><b>Responsibilities</b></p>
+<p class="text">Sydney Kit is a project manager for Austin Visuals. She maintains client and artist communications while providing updates and feedback. Sydney Kit also worked on
+    website SEO improvement and biweekly newsletters for the company.
+</p>
+<br>
+<p class="headertext"><b>Project Managment</b></p>
+<p class="text">Working with a team, Sydney Kit maintains the communication between the clients and artists, giving updates and feedback while updating the pipeline.
+</p>
+<br id=anchor1>
 <br>
 <p class="headertext"><u>Internship</u></p>
 <p class="headertext"><b>Responsibilities</b></p>
 <p class="text"> While interning for Austin Visuals, Sydney Kit created company commericals, edited blog posts, managed company social media, and worked with customers to create unique videos.</p>
 <br>
 <p class="headertext"><b>Company Commercial</b></p>
-<p class="text">Storyboards, script, video, editing, and selecting the voiceover actor were all done by Sydney Kit.</p>
+<p class="text">For this promotional explainer video, Sydney Kit was the project manager and creator. She created the script and storyboards that were then transformed into the final video. Sydney Kit
+    interviewed and hired the voiceover actor then completed the final edits.
+</p>
+<p class="text"><a href="https://austinvisuals.com/portfolio/software-company-explainer-video-promo/">Network Builder Promo Video</a></p>
     <iframe src="https://player.vimeo.com/video/418273025" width="690" height="540" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-<br>
 <p class="headertext"><b>Blog Posts</b></p>
-<p class="text">Blog posts were edited for clarity, grammar fixes, and readability. Blog posts were also created.</p>
-<a href="https://austinvisuals.com/houston-gas-and-oil-companies-are-you-looking-for-great-3d-animation/"> <img src="files/blog.JPG" style="width: 25%;"></a>
+<p class="text">Blog posts were edited for clarity, grammatical issues, and readability. New blog posts were also created.</p>
+<a href="https://austinvisuals.com/houston-gas-and-oil-companies-are-you-looking-for-great-3d-animation/"> <img src="files/blog.JPG" style="width: 17%;"></a>
 <a href="https://austinvisuals.com/email-marketing-automation-increasing-heres-why/"> <img src="files/blog2.JPG" style="width: 45%;"></a>
 <br>
 <p class="headertext"><b>Managed Company Social Media</b></p>
@@ -74,7 +85,7 @@
     <img src="files/Graphics (Question Mark).jpg" style="width: 25%;">
     <img src="files/Gaphic (Coffee).gif" style="width: 25%;">
 <br>
-<p class="headertext"">Worked With Customers To Create Unique Videos</p>
+<p class="headertext">Worked With Customers To Create Unique Videos</p>
 <p class="text">Customer wanted a music video for a rap about stimulus checks. The project was cancelled midway.</p>
 <p class="text">The following video is a rough draft that did not make it to editing and experienced rendering issues. The audio does not belong to Sydney Kit.</p>
 <video controls src="files/AV_TT_completion_cancellation.mp4" style="width: 60%;"></video>
