--- a/collections/Nature&Shapes.html
+++ b/collections/Nature&Shapes.html
@@ -29,22 +29,16 @@
     </style>
   </head>
   
-  <body>
+  <body style="text-align: center; margin: 0%;">
     <div class="navbar">
-    <a href="../home.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
-    <a href="../about.html" style="font-size: 40px;">About</a> 
-    <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
-   <a href="../collections/index.html" style="font-size: 40px;">Collections</a> 
-   <a href="../shop.html" style="font-size: 40px;">Shop</a>
-   <a href="../contact.html" style="font-size: 40px;">Contact</a>
+    <a href="../index.html"><img src="../img/SK_logo2.png" width="100%"> </a> 
+    <a href="../about.html">About</a> 
+    <a href="../portfolio.html">Portfolio</a>
+   <a href="../collections/index.html">Collections</a> 
+   <a href="../shop.html">Shop</a>
+   <a href="../contact.html">Contact</a>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <header style="font-size: 60px; text-align: center;"><b><i>Nature&Shapes</i></b></header>
+  <p class="titletext" style="margin-top: 10%;"><b><i>Nature&Shapes</i></b></p>
   <br>
   <br>
   <div style="text-align: center;"><img src="files/IMG_0463.jpg" style="height: 50%;"></div>
