--- a/collections/index.html
+++ b/collections/index.html
@@ -36,10 +36,10 @@
 <p style="margin-left: 15%;" class="headertext">Independent Art</p>  
 <div class="box";>
     <a href="ALaneyDay.html"><p style="text-align: right";>A Laney Day</p><video autoplay muted loop src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img></a>
-    <a href="PlanBeeFarm.html"><p>Plan Bee Farm Logo</p><img src="files/OBC_animatedlogo.gif" style= "height: 180px; width: 320px;"></img></a>
+      <a href="Portraits&Animals.html"><p>Portraits&Animals</p><img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img></a>
   </div>
   <div class="box";>
-    <a href="Portraits&Animals.html"><p style="text-align: right";>Portraits&Animals</p><img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img></a>
+    <a href="LogoCreation.html"><p style="text-align: right";>Logo Creation</p><img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img></a>
     <a href="../loveme/about.html"><p>Love, Me</p><img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
   </div>
   <div class="box";>
