--- a/collections/2DArt.html
+++ b/collections/2DArt.html
@@ -32,22 +32,16 @@
   </style>
 </head>
 
-<body>
+<body style="text-align: center; margin: 0%;">
   <div class="navbar">
-  <a href="../home.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
-  <a href="../about.html" style="font-size: 40px;">About</a> 
-  <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
- <a href="../collections/index.html" style="font-size: 40px;">Collections</a> 
- <a href="../shop.html" style="font-size: 40px;">Shop</a>
- <a href="../contact.html" style="font-size: 40px;">Contact</a>
+  <a href="../index.html"><img src="../img/SK_logo2.png" width="100%"> </a> 
+  <a href="../about.html">About</a> 
+  <a href="../portfolio.html">Portfolio</a>
+ <a href="../collections/index.html">Collections</a> 
+ <a href="../shop.html">Shop</a>
+ <a href="../contact.html">Contact</a>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<header style="font-size: 60px; text-align: center;"><b>2D Art</b></header><br>
+<p class="titletext" style="margin-top: 10%;"><b>2D Art</b></p>
 <div style="text-align: center;"><img src="files/2018-08-14 044.JPG" style="width: 50%;">
   </div>
 
