--- a/collections/Ceramics.html
+++ b/collections/Ceramics.html
@@ -32,19 +32,16 @@
   </style>
 </head>
 
-<body style="font-size: 30px; text-align: center;">
-  <div class="navbar">
-  <a href="../home.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
-  <a href="../about.html" style="font-size: 40px;">About</a> 
-  <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
- <a href="../collections/index.html" style="font-size: 40px;">Collections</a> 
- <a href="../shop.html" style="font-size: 40px;">Shop</a>
- <a href="../contact.html" style="font-size: 40px;">Contact</a>
-</div>
-<br>
-<br>
-<br>
-<header style="font-size: 60px;"><b>Ceramics</b></header><br>
+<body style="text-align: center; margin: 0%;">
+    <div class="navbar">
+    <a href="../index.html"><img src="../img/SK_logo2.png" width="100%"> </a> 
+    <a href="../about.html">About</a> 
+    <a href="../portfolio.html">Portfolio</a>
+   <a href="../collections/index.html">Collections</a> 
+   <a href="../shop.html">Shop</a>
+   <a href="../contact.html">Contact</a>
+  </div>
+  <p class="titletext" style="margin-top: 10%;"><b>Ceramics</b></p><br>
 <div style="text-align: center;"><video autoplay muted loop src="files/TLLJ2686.MP4" style="width: 60%;">
   </div>
 
