--- a/collections/ExpandedMedia.html
+++ b/collections/ExpandedMedia.html
@@ -32,22 +32,16 @@
   </style>
 </head>
 
-<body style="text-align: center;">
+<body style="text-align: center; margin: 0%;">
   <div class="navbar">
-  <a href="../home.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
-  <a href="../about.html" style="font-size: 40px;">About</a> 
-  <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
- <a href="../collections/index.html" style="font-size: 40px;">Collections</a> 
- <a href="../shop.html" style="font-size: 40px;">Shop</a>
- <a href="../contact.html" style="font-size: 40px;">Contact</a>
+  <a href="../index.html"><img src="../img/SK_logo2.png" width="100%"> </a> 
+  <a href="../about.html">About</a> 
+  <a href="../portfolio.html">Portfolio</a>
+ <a href="../collections/index.html">Collections</a> 
+ <a href="../shop.html">Shop</a>
+ <a href="../contact.html">Contact</a>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<header style="font-size: 60px; text-align: center;"><b>Expanded Media</b></header><br>
+<p class="titletext" style="margin-top: 10%;"><b>Expanded Media</b></p><br>
 <div style="text-align: center;"><iframe src="https://player.vimeo.com/video/357247154" width="960" height="540" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
 
