vol2 updates added

--- a/shop.html
+++ b/shop.html
@@ -38,6 +38,9 @@
         <span style="padding: 0px 20px;"> <a href="#anchor4"> Comissions</a></span>
     </p>  
   <img src="img/SydneyKitprofilepic.jpg" width="40%" height="40%">
+  <p class="text">All order selections will redirect you to your email. An automated message will pop up, all you need to do is customize the fields labeled as (number). If you are looking to purchase more 
+    than one item, please send multiple emails. Your emails will be returned with one singular PayPal invoice. If you have any questions or concerns, please reach out!
+  </p>
   <br id="anchor1">
   <br>
   <br>
@@ -48,6 +51,17 @@
   <img src="collections/files/GreetingCard_marketing1.jpg" style="width: 30%; height: 30%;">
   <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Greeting Cards&body=Hello, I would like (number) bundles of 10 Greeting Cards with (select cover type here) as the cover. I would like the inside text to say (nothing or custom message) I would like to (pick up at -)(ship it to -).">
 <i>Nature & Shapes</i> Greeting Cards</a><br><br>$20 for 10 cards<br>Comes with envelopes<br>Customizable front cover and inside message</p>
+</div>
+<div class="box">
+  <p class="text">
+<a href="https://forms.gle/E56CLRgN8RnQ7V7v9">
+  <i>Love, Me Volume 2</i></a><br><br>Comic Book Pre-Order<br><br>Orders will go out the weekend of August 21st.<br><br>More stories than Volume 1! 2 exclusive stories!</p>
+<img src="collections/files/love,me_vol2.png" style="width: 40%; height: 40%;">
+</div>
+<div class="box">
+  <img src="collections/files/stickers_post_pt2.png" style="width: 30%; height: 30%;">
+  <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Stickers&body=Hello, I would like (number) of the Love, Me Volume 2 sticekrs. I would like (quantity of which characters).">
+<i>NLove, Me Volume 2</i> Stickers</a><br><br>$1.50 each<br>Shipping is included.<br>Stickers are sent out on Sunday's.</p>
 </div>
   <br>
   <br id="anchor2"><br><br>
@@ -68,7 +82,7 @@
   <div class="box">
       <img src="img/Love,Me_cover.png" style="width: 25%; height: 25%;">
       <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Love, Me Volume 1&body=Hello, I would like (number) copy/copies of the Love, Me Volume 1. I would like to (pick up at -)(ship it to -).">
-      <i>Love, Me</i> Volume 1<br>Comic book</a><br><br> $7 each <br> $6 for US shipping </p>
+      <i>Love, Me</i> Volume 1<br>Comic Book</a><br><br> $7 each <br> $5 for US shipping </p>
   </div>
   <br>
   <div class="box">
