--- a/loveme/about.html
+++ b/loveme/about.html
@@ -20,7 +20,7 @@
       <img src="comicbook3.jpg" style="width: 30%; height: 30%;">
       <br>
       <br>
-      <p class="text">Copies of <i>Love, Me Volume One</i> are available at the <a href="../shop.html">shop</a>.<br>Digital access to the comic can be accessed by clicking <a href="../loveme/access.html">here.</a><br>The advice submission form can be found <a href="https://forms.gle/ZqxaHLzwF75FTRtz9">here</a>.</p>
+      <p class="text">Copies of <i>Love, Me Volume One</i> and <i>Love, Me Volume Two</i> are available at the <a href="../shop.html">shop</a>.<br>Digital access to the comics can be accessed by clicking <a href="../loveme/access.html">here.</a><br>The advice submission form can be found <a href="https://forms.gle/ZqxaHLzwF75FTRtz9">here</a>.</p>
       <img src="comicfan5.jpg" style="width: 12.5%; margin-right: 2.5%;"><img src="comicfan4.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan2.jpg" style="width: 10%;margin-right: 2.5%;"><img src="comicfan1.jpg" style="width: 10%; margin-right: 2.5%;"><img src="comicfan3.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan6.jpg" style="width: 11.5%;">
     <br>
     <div style="margin-right: 10%; margin-left: 10%;">
@@ -56,9 +56,8 @@
       }
       </script>
       <br>
-      <p class="headertext">Volume 2 Coming Soon!</p>
-      <p class="text"> Volume 2 is currently in the works. For updates follow @Sydney.Kit.Anim on <a href="https://www.instagram.com/sydney.kit.anim/">Instagram</a> and <a href="https://www.facebook.com/sydney.kit.anim/">Facebook</a>.
-        Spots are available to submit your own adivce/ life story! Just fill out this <a href="https://forms.gle/ZqxaHLzwF75FTRtz9">form.</a></p>
+      <p class="headertext">Volume 2 is finally here!</p>
+      <p class="text"> Volume 2 will be ready to send out in late August. <a href="../shop.html">Pre-Orders</a> are open until August 13th! Make sure to pre-order your copy today to reserve your copy and get some freebies. For updates follow @Sydney.Kit.Anim on <a href="https://www.instagram.com/sydney.kit.anim/">Instagram</a> and <a href="https://www.facebook.com/sydney.kit.anim/">Facebook</a>.</p>
         <video autoplay looped muted src="Love,Me_Vol2_announcement.mp4" style="width: 35%; height: 35%;"></video>
     <br>
       <p class="headertext">How It Started</p>
