shop spelling updates

--- a/shop.html
+++ b/shop.html
@@ -36,10 +36,11 @@
         <span style="padding: 0px 20px;"><a href="#anchor2"> Originals</a></span>
         <span style="padding: 0px 20px;"><a href="#anchor3"> Prints</a></span>
         <span style="padding: 0px 20px;"> <a href="#anchor4"> Comissions</a></span>
-    </p>  
+    </p> 
+    <div style="margin-left: 10%; margin-right: 10%;">
   <img src="img/SydneyKitprofilepic.jpg" width="40%" height="40%">
-  <p class="text">All order selections will redirect you to your email. An automated message will pop up, all you need to do is customize the fields labeled as (number). If you are looking to purchase more 
-    than one item, please send multiple emails. Your emails will be returned with one singular PayPal invoice. If you have any questions or concerns, please reach out!
+  <p class="text">All order selections will redirect you to your email. An automated message will pop up and all you will need to do is customize the fields labeled as (number). If you are looking to purchase more 
+    than one item, please send multiple emails. Your emails will be returned with one singular PayPal invoice (it does not have to be paid through PayPal). If you have any questions or concerns, please reach out!
   </p>
   <br id="anchor1">
   <br>
@@ -55,13 +56,13 @@
 <div class="box">
   <p class="text">
 <a href="https://forms.gle/E56CLRgN8RnQ7V7v9">
-  <i>Love, Me Volume 2</i></a><br><br>Comic Book Pre-Order<br><br>Orders will go out the weekend of August 21st.<br><br>More stories than Volume 1! 2 exclusive stories!</p>
+  <i>Love, Me Volume 2</i></a><br><br>Comic Book Pre-Order<br><br>Orders will go out the weekend of August 21st<br><br>More stories than Volume 1! <br>2 exclusive stories!</p>
 <img src="collections/files/love,me_vol2.png" style="width: 40%; height: 40%;">
 </div>
 <div class="box">
   <img src="collections/files/stickers_post_pt2.png" style="width: 30%; height: 30%;">
-  <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Stickers&body=Hello, I would like (number) of the Love, Me Volume 2 sticekrs. I would like (quantity of which characters).">
-<i>NLove, Me Volume 2</i> Stickers</a><br><br>$1.50 each<br>Shipping is included.<br>Stickers are sent out on Sunday's.</p>
+  <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Stickers&body=Hello, I would like (number) of the Love, Me Volume 2 stickers. I would like (quantity of which characters).">
+<i>Love, Me Volume 2</i> Stickers</a><br><br>$1.50 each<br>Shipping is included<br>Stickers are sent out on Sunday's</p>
 </div>
   <br>
   <br id="anchor2"><br><br>
@@ -126,6 +127,8 @@
     <a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Portrait Digital Painting Commission&body=Hello, I would like a custom digital portrait. The image I would like painted is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, the same as the image, etc.)">
     <p class="text" style="margin-left: 5%;">Portrait Piece </a><br><br>Starting at $20<br><br> Digital Painting</p>
   </div>
+
+</div> 
   <br>
   <br>
   <br>
