vol2 digital access added

--- a/loveme/volume1.html
+++ b/loveme/volume1.html
@@ -17,7 +17,7 @@
        <a href="../contact.html" style="font-size: 40px;">Contact</a>
       </div>
       <br>
-<p>Digital Access to <i>Love, Me</i> Volume 1</p>
+<p>Digital Access to <i>Love, Me</i> Volume One</p>
 <br>
 <div class="w3-content w3-display-container">
     <img class="mySlides" src="../img/Love,Me_cover.png" style="width:50%; margin-left: 25%">
