wallpapers and blog
added to mural page
updated love, me page

--- a/loveme/volume1.html
+++ b/loveme/volume1.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>Webcomics</title>
+<title>Volume One</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="../text.css">
@@ -12,7 +12,7 @@
         <a href="../index.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
         <a href="../about.html" style="font-size: 40px;">About</a> 
         <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
-       <a href="../Collections/index.html" style="font-size: 40px;">Collections</a> 
+       <a href="../collections/index.html" style="font-size: 40px;">Collections</a> 
        <a href="../shop.html" style="font-size: 40px;">Shop</a>
        <a href="../contact.html" style="font-size: 40px;">Contact</a>
       </div>
