--- a/shop.html
+++ b/shop.html
@@ -56,13 +56,13 @@
 <div class="box">
   <p class="text">
 <a href="https://forms.gle/E56CLRgN8RnQ7V7v9">
-  <i>Love, Me Volume 2</i></a><br><br>Comic Book Pre-Order<br><br>Orders will go out the weekend of August 21st<br><br>More stories than Volume 1! <br>2 exclusive stories!</p>
+  <i>Love, Me Volume 2</i></a><br><br>Comic Book<br><br>More stories than Volume 1! <br>2 exclusive stories!</p>
 <img src="collections/files/love,me_vol2.png" style="width: 40%; height: 40%;">
 </div>
 <div class="box">
   <img src="collections/files/stickers_post_pt2.png" style="width: 30%; height: 30%;">
   <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Stickers&body=Hello, I would like (number) of the Love, Me Volume 2 stickers. I would like (quantity of which characters).">
-<i>Love, Me Volume 2</i> Stickers</a><br><br>$1.50 each<br>Shipping is included<br>Stickers are sent out on Sunday's</p>
+<i>Love, Me</i> Stickers</a><br><br>$1.50 each<br>Shipping is included<br>Stickers are sent out on Sunday's</p>
 </div>
   <br>
   <br id="anchor2"><br><br>
