--- a/collections/index.html
+++ b/collections/index.html
@@ -82,6 +82,9 @@
   </div>
   <div class="box";>
     <a href="MovingImage.html"><p style="text-align: right;">Moving Image</p><video autoplay muted loop src="files/Our Biggest Dream_lowMB.mp4" style= "height: 180px; width: 320px";></video></a>
+    <a href="Mural.html"><p>Mural</p><img src="muralfiles/cklogo.png" style= "height: 180px; width: 320px";></img></a>
+  </div>
+  <div class="box";>
     <a href="NewMedia.html"><p>New Media</p><video autoplay muted loop src="files/proto- gears animated.mp4" style= "height: 180px; width: 320px";></video></a>
   </div>
   <div class="box";>
