--- a/loveme/about.html
+++ b/loveme/about.html
@@ -16,22 +16,30 @@
    <a href="../contact.html">Contact</a>
   </div>
       <br  id="anchor1">
-      <p class="titletext" style="margin-bottom: 0px;"><i>Love, Me</i></p>
-      <img src="comicbook3.jpg" style="width: 30%; height: 30%;">
+      <p class="titletext" style="margin-bottom: 0px; margin-top: 8%;"><i>Love, Me</i></p>
+      <img src="bothcomics.jpeg" style="width: 50%; height: 50%;">
       <br>
+      <p class="headertext">
+        <span style="padding: 0px 20px;"><a href="../shop.html">Buy the Comics</a></span>
+        <span style="padding: 0px 20px;"><a href="https://forms.gle/cJNMiL1aU3CXFk4P6">Submit Advice</a></span>
+        <span style="padding: 0px 20px;"><a href="access.html">Digital Access</a></span>
+        <span style="padding: 0px 20px;"> <a href="wallpapers.html">Wallpapers</a></span>
+    </p>  
       <br>
-      <p class="text">Copies of <i>Love, Me Volume One</i> and <i>Love, Me Volume Two</i> are available at the <a href="../shop.html">shop</a>.<br>Digital access to the comics can be accessed by clicking <a href="../loveme/access.html">here.</a><br>The advice submission form can be found <a href="https://forms.gle/ZqxaHLzwF75FTRtz9">here</a>.</p>
       <img src="comicfan5.jpg" style="width: 12.5%; margin-right: 2.5%;"><img src="comicfan4.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan2.jpg" style="width: 10%;margin-right: 2.5%;"><img src="comicfan1.jpg" style="width: 10%; margin-right: 2.5%;"><img src="comicfan3.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan6.jpg" style="width: 11.5%;">
     <br>
     <div style="margin-right: 10%; margin-left: 10%;">
-    <p class="headertext">About the Comic Book</p>
+    <p class="headertext">About the Comic Books</p>
       <p class="text">"It's okay to not be okay." That is something that is not said enough. <i>Love, Me</i> serves as a collection of short comics that share advice and personal stories from friends and family. Each comic tackles subject such as depression,
-      sexuality, deaf awareness, and more, in hopes that others can find comfort in relatability.</p>
+      sexuality, facing your fears, and more, in hopes that others can find comfort in relatability.</p>
       <div class="w3-content w3-display-container">
         <img class="mySlides" src="comicbook1.jpg" style="width:70%; margin-left: 15%;">
         <img class="mySlides" src="comicbookinside1.jpg" style="width:70%; margin-left: 15%;">
         <img class="mySlides" src="comicbookinside2.jpg" style="width:70%; margin-left: 15%;">
         <img class="mySlides" src="comicbookinside3.jpg" style="width:70%; margin-left: 15%;">
+        <img class="mySlides" src="vol2pandora.jpeg" style="width:70%; margin-left: 15%;">
+        <img class="mySlides" src="vol2chance.jpeg" style="width:70%; margin-left: 15%;">
+        <img class="mySlides" src="vol2merch.jpeg" style="width:70%; margin-left: 15%;">
         <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
       </div>
@@ -56,16 +64,14 @@
       }
       </script>
       <br>
-      <p class="headertext">Volume 2 is finally here!</p>
-      <p class="text"> Volume 2 will be ready to send out in late August. <a href="../shop.html">Pre-Orders</a> are open until August 13th! Make sure to pre-order your copy today to reserve your copy and get some freebies. For updates follow @Sydney.Kit.Anim on <a href="https://www.instagram.com/sydney.kit.anim/">Instagram</a> and <a href="https://www.facebook.com/sydney.kit.anim/">Facebook</a>.</p>
-        <video autoplay looped muted src="Love,Me_Vol2_announcement.mp4" style="width: 35%; height: 35%;"></video>
-    <br>
+    
       <p class="headertext">How It Started</p>
-<p class="text"><i>Love, Me</i> started off as a semester-long project for <a href="osu_Webcomics.html">Webcomics</a> and has continued into a larger series.</p>
-<img src="comicbook2.jpg" style="width: 25%; height: 25%; margin-right: 10px"><img src="comicbook6.jpg" style="width: 25%; height: 25%; margin-left: 10px">
+<p class="text"><i>Love, Me</i> started off as a semester-long project for <a href="Webcomics.html">Webcomics</a> and has continued into a larger series. The larger series consists of
+two published comic books, merchandise, and a mini series.</p>
+<img src="IMG_2828.jpeg" style="width: 25%; height: 25%; margin-right: 10px"><img src="comicbook6.jpg" style="width: 25%; height: 25%; margin-left: 10px">
 <br>
 <p class="headertext">How to support the "Love, Me" series</p>
-<p class="text">Submit your own advice to be turned into a comic! Send Sydney Kit an <a href="mailto:kit.frank.art@gmail.com">email</a> with the subject "Love, Me Advice Submission" or fill out this <a href="https://forms.gle/ZqxaHLzwF75FTRtz9">form.</a></p>
+<p class="text">Submit your own advice to be turned into a comic! Send Sydney Kit an <a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Advice Submission">email</a> or fill out this <a href="https://forms.gle/4dHxhksVVWxDBgUz7">form.</a></p>
 </div>
 <br>
 <br>
