--- a/loveme/volume2.html
+++ b/loveme/volume2.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>Webcomics</title>
+<title>Volume Two</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="../text.css">
@@ -12,7 +12,7 @@
         <a href="../index.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
         <a href="../about.html">About</a> 
         <a href="../portfolio.html">Portfolio</a>
-       <a href="../Collections/index.html">Collections</a> 
+       <a href="../collections/index.html">Collections</a> 
        <a href="../shop.html">Shop</a>
        <a href="../contact.html">Contact</a>
       </div>
